--- a/css/style.default.css
+++ b/css/style.default.css
@@ -201,7 +201,7 @@ section header {
 * ==========================================================
 */
 nav.navbar {
-  background: #393836;
+  background: #061a45;
   padding: .8rem 0;
   /* Navbar Brand --------- */
   /*  Dropdowns ------------ */
@@ -379,7 +379,7 @@ nav.navbar a.menu-btn:hover {
   height: 100%;
   width: 180px;
   text-align: left;
-  background: #393836;
+  background: #061a45;
   color: #fff;
   padding-top: 20px;
   z-index: 999;
@@ -427,7 +427,7 @@ nav.navbar a.menu-btn:hover {
 }
 
 .side-navbar li a:focus, .side-navbar li a:hover, .side-navbar li a[aria-expanded="true"] {
-  background: #33b35a;
+  background: #908d8d3b;
   color: #fff;
   text-decoration: none;
 }
@@ -457,7 +457,7 @@ nav.navbar a.menu-btn:hover {
 }
 
 .side-navbar li ul {
-  background: #292929;
+  background: #061a45;
   position: relative;
   min-width: 100%;
   left: 0;
@@ -470,11 +470,12 @@ nav.navbar a.menu-btn:hover {
 }
 
 .side-navbar li ul.collapse a {
-  border-left: 2px solid #33b35a;
+  border-left: 2px solid red;
 }
 
 .side-navbar li ul.collapse a:hover {
-  background: #121212;
+  background: white;
+  color: black;
 }
 
 .side-navbar .sidenav-header {
