--- a/css/style.default.css
+++ b/css/style.default.css
@@ -1163,7 +1163,7 @@ footer.main-footer {
   position: absolute;
   width: 100%;
   bottom: 0;
-  background: #222;
+  background: #061a45;
   padding: 10px 0;
 }
 
