--- a/css/style.Administrador.css
+++ b/css/style.Administrador.css
@@ -2684,7 +2684,7 @@ a.text-secondary:focus, a.text-secondary:hover {
 }
 
 .text-success {
-  color: #28a745 !important;
+  color: #6e200b !important;
 }
 
 a.text-success:focus, a.text-success:hover {
